Fixed stylistic issues

--- a/src/templates/sections/event.html
+++ b/src/templates/sections/event.html
@@ -14,7 +14,7 @@
     {% if section.calendar_link %}
     <a href="{{ section.calendar_link }}" class="btn btn-primary btn-sm" target="_blank">
         <small>
-        <i class="fas fa-calendar-plus"></i>&nbsp;&nbsp;Add to Calendar
+        <i class="fab fa-facebook"></i>&nbsp;&nbsp;View Event
 </small>
     </a>
     {% endif %}
